# alcomarket

./: .env.example  .gitattributes  .gitignore  Caddyfile  Dockerfile  README.md  backend-entrypoint.sh  bot.py  data_import.py  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  setup.cfg
alcomarket/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
core/: admin.py  handlers.py  tasks.py  urls.py  utils.py  views.py
core/middlewares/: age_check.py
core/templatetags/: url_replace.py  user_filters.py
data/: categoties.csv  data.ods  goods.csv  manufacures.csv  some_data.xlsx
feedbacks/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
feedbacks/migrations/: 0001_initial.py  0002_alter_feedback_created_at_alter_feedback_email_and_more.py  0003_feedback_is_processed.py
goods/: admin.py  forms.py  models.py  sitemaps.py  temp.py  urls.py  utils.py  views.py
goods/migrations/: 0001_initial.py  0002_alter_good_category_alter_good_manufacturer.py  0003_alter_good_options_remove_good_archived_good_active.py  0004_alter_category_options_alter_manufacturer_options.py  0005_rename_orderitem_ordergood_usershoppingcart_and_more.py  0006_remove_ordergood_good_remove_ordergood_order_and_more.py  0007_alter_usershoppingcart_quantity.py  0008_good_volume.py  0009_alter_good_volume.py  0010_category_slug.py  0011_alter_category_slug.py  0012_manufacturer_slug.py  0013_alter_manufacturer_slug.py  (+6 more)
orders/: admin.py  forms.py  models.py
templates/: base.html  robots.txt
users/: admin.py  forms.py  urls_auth.py  urls_profile.py  views.py
(+47 files in other folders)
