[tool.poetry]
name = "alcomarket"
version = "0.1.0"
description = ""
authors = ["Vitaliy Pavlov <v-2841@yandex.ru>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10, <=3.12"
django = "4.2.4"
requests = "2.31.0"
django-debug-toolbar = "4.2.0"
psycopg2-binary = "2.9.7"
python-dotenv = "1.0.0"
gunicorn = "20.1.0"
pillow = "10.0.1"
djlint = "1.34.0"
python-telegram-bot = "13.15"
redis = "5.0.5"
celery = "5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
